# QuadLingo

./: .clang-format  CMakeLists.txt  README.md  central_widget.cpp  central_widget.h  choice_widget.cpp  choice_widget.h  difficulty_dialog.cpp  difficulty_dialog.h  empty_exercise.cpp  empty_exercise.h  exercise_widget.cpp  exercise_widget.h  grammar_exercise.cpp  grammar_exercise.h  grammar_question.h  grammar_widget.cpp  grammar_widget.h  main.cpp  main_window.cpp  main_window.h  menu.cpp  menu.h  music_class.cpp  music_class.h  progress_bar.cpp  progress_bar.h  settings_dialog.cpp  settings_dialog.h  tasks_loader.cpp  tasks_loader.h  translation_exercise.cpp  translation_exercise.h  translation_widget.cpp  translation_widget.h
exercises/: grammar_easy.json  grammar_hard.json  translation_medium.json
exercises/translation/easy/: answers.txt  tasks.txt
exercises/translation/hard/: answers.txt  tasks.txt
exercises/translation/medium/: answers.txt  tasks.txt
